@@ -1,3 +1,8 @@
+2011-11-24  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mmg: enhancement: Made mmg DPI-aware on Windows (tested up to
+	144 DPI).
+
 2011-11-09  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mmg: bug fix: mmg will append ".xml" to the file name entered
